--- a/2.Centos6下创建Centos6基础镜像.MD
+++ b/2.Centos6下创建Centos6基础镜像.MD
@@ -89,10 +89,10 @@ centos              latest              1c1b67b33c28        6 weeks ago        1
 
 ### 7、 docker rmi ,删除镜像 docker rmi IMAGE[IMAGE ...], 其中参数 IMAGE可以为标签或ID
 
-如果使用 标签号TAG 删除的话：
-当同一个镜像拥有多个标签的时候， docker rmi 命令只是删除了该镜像多个标签中的指定标签而已，并不影响镜像文件。
-如果使用 镜像ID （IMAGE ID） 删除的话，
-会先尝试删除所有指向该镜像的标签，然后删除该镜像文件本身。
+    如果使用 标签号TAG 删除的话：
+    当同一个镜像拥有多个标签的时候， docker rmi 命令只是删除了该镜像多个标签中的指定标签而已，并不影响镜像文件。
+    如果使用 镜像ID （IMAGE ID） 删除的话，
+    会先尝试删除所有指向该镜像的标签，然后删除该镜像文件本身。
 
 注意：当有该镜像创建的容器存在时，镜像文件默认无法被删除。
 那么如果想要强行删除镜像的话，可以使用 -f 参数来删除，不建议这样删除，因为这样往往会造成一些遗留的问题。
@@ -102,3 +102,139 @@ sudo docker rmi -f centos
 正确的做法是，先删除依赖该镜像的容器，再来删除镜像。
 
 ### 8、docker rm ，删除容器， docker rmi [CONTAINER ID]
+```
+[kduser@v-shrcloud-shr local]$ sudo docker rm 7c6209fb11be 
+7c6209fb11be
+
+[kduser@v-shrcloud-shr local]$ sudo docker rmi -f centos 
+Untagged: centos:latest
+Deleted: 1c1b67b33c2810dcdbe70cf5ab186f1de50b138d06877e6b8421d5329a70beb1
+Deleted: acec82331181312afa99df6a79e541ea819d64d32af6f4d3656897ce63d55f88
+Deleted: 6c51599230478bde53cfcf5f4e7f68c2bf295102f31146c0bb6e9b814365c0e7
+```
+
+
+### 9、创建镜像
+创建镜像有三种方法：
+a.基于已有镜像的容器创建
+b.基于本地模板导入
+c.基于Dockerfile 创建
+
+#### a.基于已有镜像的容器创建
+    docker commit [OPTIONS] CONTAINER [REPOSITORY[:TAG]]
+    -a, -- author="" 作者信息
+    -m, --message="" 提交信息
+    -p, --pause=true 提交时暂停容器运行
+
+如今服务器情况：
+```
+[kduser@v-shrcloud-shr local]$ sudo docker ps -a
+CONTAINER ID        IMAGE              COMMAND            CREATED            STATUS              PORTS              NAMES
+
+[kduser@v-shrcloud-shr local]$ sudo docker images
+REPOSITORY          TAG                IMAGE ID            CREATED            VIRTUAL SIZE
+```
+下面演示如何使用该命令创建一个新镜像。首先，启动一个镜像，并在其中进行修改操作，例如创建一个test文件，之后退出：
+```
+[kduser@v-shrcloud-shr local]$ sudo docker run -ti centos:6.8 /bin/bash
+[root@ee5956932051 /]# touch test 
+[root@ee5956932051 /]# exit
+[kduser@v-shrcloud-shr local]
+
+记住ID为ee5956932051
+```
+此时该容器跟原centos镜像相比，已经发生了改变，可以使用docker commit命令来提交一个新的镜像。提交时可以使用ID或名称来指定容器：
+```
+[kduser@v-shrcloud-shr local]$ sudo docker commit -m "Added a new file" -a "Docker Newbee" ee5956932051 test
+06e709848b968e38399e8fbedf1e76fc5e1bdcc49f3433d44d362e6ef6f3a5e7
+```
+顺利的话，命令会返回新创建的镜像的ID信息，例如：
+06e709848b968e38399e8fbedf1e76fc5e1bdcc49f3433d44d362e6ef6f3a5e7
+此时查看本地镜像列表，即可看到新创建的镜像：
+```
+[kduser@v-shrcloud-shr local]$ sudo docker images
+REPOSITORY          TAG                IMAGE ID            CREATED            VIRTUAL SIZE
+test                latest             06e709848b96        28 seconds ago      194.5 MB
+centos              6.8                c4cdd30c384d        6 weeks ago        194.5 MB
+```
+#### b.基于本地模板导入
+也可以直接从一个操作系统模板文件导入一个镜像。在这里，推荐使用 OpenVZ 提供的模板来创建，OPENVZ模板的下载地址为 https://openvz.org/Download/template/precreated。
+比如，下载了一个 centos 的模板压缩包后，可以使用以下命令导入：
+```
+sudo cat centos-6-x86_64-minimal.tar.gz | docker import - centos:6.8
+
+[kduser@v-shrcloud-shr applications]$ pwd
+/usr/local/share/applications
+
+[kduser@v-shrcloud-shr applications]$ ll
+total 210504
+-rw-rw-r-- 1 kduser kduser 215553751 Oct 29 18:48 centos-6-x86_64-minimal.tar.gz
+
+[kduser@v-shrcloud-shr applications]$ sudo cat centos-6-x86_64-minimal.tar.gz | sudo docker import - centos:6.8 
+711e9b943e642c2f18543f7aec69488f497d5179d528c2f0a2490212f6939bda
+
+```
+查看导入的镜像，已经存在本地了：
+```
+[kduser@v-shrcloud-shr applications]$ sudo docker images
+REPOSITORY          TAG                IMAGE ID            CREATED            VIRTUAL SIZE
+centos              6.8                711e9b943e64        4 minutes ago      553 MB
+test                latest             06e709848b96        28 minutes ago      194.5 MB
+```
+
+### 10、存出和载入镜像 docker save 与 docker load
+
+#### 存出镜像 docker save
+    如果要导出镜像到本地文件，可以使用 docker save 命令。例如，存出本地 test:latest (repository的image) 为文件test.tar
+```
+[kduser@v-shrcloud-shr applications]$ sudo docker images
+REPOSITORY          TAG                IMAGE ID            CREATED            VIRTUAL SIZE
+centos              6.8                711e9b943e64        13 minutes ago      553 MB
+test                latest             06e709848b96        37 minutes ago      194.5 MB
+
+[kduser@v-shrcloud-shr applications]$ sudo docker save -o test.tar test:latest
+
+[kduser@v-shrcloud-shr applications]$ ll
+total 407996
+-rw-rw-r-- 1 kduser kduser 215553751 Oct 29 18:48 centos-6-x86_64-minimal.tar.gz
+-rw-r--r-- 1 root  root  202230784 Oct 29 19:08 test.tar
+```
+
+#### 载入镜像 docker load
+     可以使用 docker load 从存出的本地文件中再导入到本地镜像库，例如从刚刚存的文件 test.tar导入镜像到本地镜像列表，如下所示：
+    [kduser@v-shrcloud-shr applications]$ sudo docker load < test.tar
+    或者
+    [kduser@v-shrcloud-shr applications]$ sudo docker load --input test.tar
+```
+[kduser@v-shrcloud-shr applications]$ ll
+total 407996
+-rw-rw-r-- 1 kduser kduser 215553751 Oct 29 18:48 centos-6-x86_64-minimal.tar.gz
+-rw-r--r-- 1 root  root  202230784 Oct 29 19:08 test.tar
+
+[kduser@v-shrcloud-shr applications]$ sudo docker images
+REPOSITORY          TAG                IMAGE ID            CREATED            VIRTUAL SIZE
+centos              6.8                711e9b943e64        31 minutes ago      553 MB
+
+[kduser@v-shrcloud-shr applications]$ sudo docker load < test.tar
+
+[kduser@v-shrcloud-shr applications]$ sudo docker images        
+REPOSITORY          TAG                IMAGE ID            CREATED            VIRTUAL SIZE
+centos              6.8                711e9b943e64        32 minutes ago      553 MB
+test                latest              06e709848b96        56 minutes ago      194.5 MB
+[kduser@v-shrcloud-shr applications]$ 
+```
+
+### 11、docker push 上传镜像 
+     可以使用 docker push 命令上传镜像到仓库，默认上传到 DockerHub 官方仓库（需要登录），命令格式为 docker push NAME[:TAG]
+     用户在DockerHub网站注册后，既可上传资质的镜像。例如用户user上传本地的test:latest镜像，可以先添加新的表情 user/test:latest ,然后用 docker push命令上传镜像：
+```
+[kduser@v-shrcloud-shr applications]$ sudo docker tag test:latest user/test:latest
+[kduser@v-shrcloud-shr applications]$ sudo docker push user/test:latest
+The push refers to a repository [user/test] (len: 1)
+06e709848b96: Image push failed 
+
+Please login prior to push:
+Username: Sword52888@163.com
+Password: 
+Email: Sword52888@163.com
+```
